--- a/_posts/2021-03-16-dataviz-makeover-3/dataviz-makeover-3.Rmd
+++ b/_posts/2021-03-16-dataviz-makeover-3/dataviz-makeover-3.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Dataviz Makeover 3"
 description: |
-  A short description of the post.
+  DataViz Makeover 3 for ISSS608: Visual Analytics
 author:
   - name: LIM Kai Chin
     url: https://www.linkedin.com/in/kai-chin-lim-a5030b156/
